<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">PRM391x_Asm1_anhnh07178@funix.edu.vn</string>
    <string name="message">Message</string>
    <string name="phone">Phone</string>
    <string name="recipient">Recipient</string>
    <string name="messageHint">Message…</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>
    <string name="time">Time</string>
    <string name="setup">Setup</string>
    <string name="someone">Someone</string>
    <string name="call_to">Call to…!</string>
</resources>