<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="35dp"
    android:layout_marginEnd="35dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MessageActivity">

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_to"
        android:textColor="@color/heavy_orange"
        android:textSize="40sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="190dp"
        android:background="@color/heavy_orange"
        android:drawableStart="@drawable/ic_baseline_call"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/someone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="0dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <RadioGroup
        android:id="@+id/timeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:buttonTint="@color/medium_orange"
            android:text="@string/hour"
            android:textAlignment="viewStart"
            android:textColor="@color/medium_orange"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/radioMinute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:buttonTint="@color/medium_orange"
            android:text="@string/minute"
            android:textAlignment="viewStart"
            android:textColor="@color/medium_orange"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/radioSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:buttonTint="@color/medium_orange"
            android:text="@string/second"
            android:textAlignment="viewStart"
            android:textColor="@color/medium_orange"
            tools:ignore="TextContrastCheck" />
    </RadioGroup>

    <EditText
        android:id="@+id/etTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:drawableStart="@drawable/ic_baseline_date_range"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="time"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textAlignment="viewStart"
        android:textColor="@color/gray"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnPhone"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="@color/heavy_orange"
        android:text="@string/setup"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

</LinearLayout>